iniciado estilização em css3

--- a/controleDeAcesso.html
+++ b/controleDeAcesso.html
@@ -25,6 +25,25 @@
         </nav>
     </header>
     <!-- cabeçalho -- Fim -->
+    <h1>Controle de Acesso</h1>
+
+    <div id="infoMessage">
+        (............)
+    </div>
+    <form>
+        <fieldset>
+            <legend>Parâmetros de Acesso</legend>
+
+            <label for="id">ID</label><br>
+            <input type="text" name="id" id="id"><br>
+
+            <label for="rg">RG</label><br>
+            <input type="text" name="rg" id="rg"><br>
+
+        </fieldset>
+        <br>
+        <input type="submit" value="Registrar acesso">
+    </form>
 
     <!-- Rodapé - inicio-->
 </body>
