--- a/novoAluno.html
+++ b/novoAluno.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/logo_academia.jpg">
     <title>ProAcademia</title>
 </head>
@@ -32,12 +33,9 @@
 
     <form>
         <fieldset>
-
             <legend>Dados pessoais</legend>
-
             <label for="nome">Nome</label><br>
             <input type="text" name="nome" id="nome"><br>
-
             <label for="sexo">Sexo</label><br>
             <select name="sexo" id="sexo">
                 <option value="">Masculino</option>
@@ -45,27 +43,50 @@
             </select><br>
             <label for="rg">RG</label><br>
             <input type="text" name="rg" id="rg"><br>
-
             <label for="dataDeNascimento">Data de Nascimento</label><br>
             <input type="date" name="dataDeNascimento" id="dataDeNascimento">
-
         </fieldset>
+        <br>
+        <fieldset>
+            <legend>Situação</legend>
+            <label for="situacao">Situação</label><br>
+            <select name="situacao" id="situacao">
+                <option value="">Ativo</option>
+                <option value="">Inativo</option>
+                <option value="">Com pendência</option>
+            </select><br>
+        </fieldset>
+        <br>
+        <fieldset>
+            <legend>Endereço</legend>
+            <label for="rua">Rua</label><br>
+            <input type="text" name="rua" id="rua"><br>
+            <label for="numero">Número</label><br>
+            <input type="text" name="numero" id="numero"><br>
+            <label for="complemento">Complemento</label><br>
+            <input type="text" name="complemento" id="complemento"><br>
+            <label for="cidade">Cidade</label><br>
+            <input type="text" name="cidade" id="cidade"><br>
+            <label for="estado">Estado</label><br>
+            <select name="estado" id="estado">
+                        <option value="">(lista)</option>
+                    </select><br>
+            <label for="cep">CEP</label><br>
+            <input type="text" name="cep" id="cep">
+        </fieldset><br>
 
-
-
-
-
-
-
-
-
-
+        <fieldset>
+            <legend>Contato</legend>
+            <label for="email">E-mail</label><br>
+            <input type="email" name="email" id="email"><br>
+            <label for="telefoneDDD">Telefone</label><br>
+            <input type="tel" name="telefoneDDD" id="telefoneDDD">
+            <input type="tel" name="telefoneNumero" id="telefoneNumero"><br>
+        </fieldset>
+        <br>
+        <input type="submit" value="Gravar">
+        <input type="button" value="Relatório de acessos">
     </form>
-
-
-
-
-
     <!-- Rodapé - inicio-->
 </body>
 
