continuação de estilização com CSS3

--- a/controleDeAcesso.html
+++ b/controleDeAcesso.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <!-- cabeçalho -- Fim -->
-    <h1>Controle de Acesso</h1>
+    <h1 id="h1controleAcesso">Controle de Acesso</h1>
 
     <div id="infoMessage">
         (............)
