--- a/pesquisaDeAluno.html
+++ b/pesquisaDeAluno.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <!-- cabeçalho -- Fim -->
-    <h1>Pesquisa de aluno</h1>
+    <h1 id="h1pesquisaAluno">Pesquisa de aluno</h1>
 
     <div id="infoMessage">
         (............)
