--- a/relatorioDeSituacoes.html
+++ b/relatorioDeSituacoes.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <!-- cabeçalho -- Fim -->
-    <h1>Relatório de Situação</h1>
+    <h1 id="h1relatorioSituacao">Relatório de Situação</h1>
 
     <div id="infoMessage">
         (............)
