--- a/novoAluno.html
+++ b/novoAluno.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <!-- cabeçalho -- Fim -->
-    <h1>Novo Aluno</h1>
+    <h1 id="h1novoAluno">Novo Aluno</h1>
 
     <div id="infoMessage">
         (............)
