--- a/novoAluno.html
+++ b/novoAluno.html
@@ -23,12 +23,13 @@
                 <a href="relatorioDeSituacoes.html">Relatorios de situação</a>
             </div>
         </nav>
+
     </header>
     <!-- cabeçalho -- Fim -->
     <h1 id="h1novoAluno">Novo Aluno</h1>
 
     <div id="infoMessage">
-        (............)
+        (Aqui vira mensagem...)
     </div>
 
     <form>
