estilização de paginas em css3-final

--- a/pesquisaDeAluno.html
+++ b/pesquisaDeAluno.html
@@ -65,8 +65,8 @@
             <td>pedroso@gmail.com</td>
             <td>Ativo</td>
             <td>
-                <input type="button" value="Editar">
-                <input type="button" value="Excluir">
+                <input type="button" value="Editar" id="editar">
+                <input type="button" value="Excluir" id="excluir">
             </td>
         </tr>
         <tr>
@@ -76,8 +76,8 @@
             <td>carlos@hotmail.com</td>
             <td>Pendente</td>
             <td>
-                <input type="button" value="Editar">
-                <input type="button" value="Excluir">
+                <input type="button" value="Editar" id="editar">
+                <input type="button" value="Excluir" id="excluir">
             </td>
         </tr>
         <tr>
@@ -87,8 +87,8 @@
             <td></td>
             <td></td>
             <td>
-                <input type="button" value="Editar">
-                <input type="button" value="Excluir">
+                <input type="button" value="Editar" id="editar">
+                <input type="button" value="Excluir" id="excluir">
             </td>
         </tr>
         <tr>
@@ -98,8 +98,8 @@
             <td></td>
             <td></td>
             <td>
-                <input type="button" value="Editar">
-                <input type="button" value="Excluir">
+                <input type="button" value="Editar" id="editar">
+                <input type="button" value="Excluir" id="excluir">
             </td>
         </tr>
     </table>
