--- a/relatorioDeSituacoes.html
+++ b/relatorioDeSituacoes.html
@@ -62,7 +62,7 @@
             <td>Ativo</td>
             <td>9499495678</td>
             <td>
-                <input type="button" value="Editar">
+                <input type="button" value="Editar" id="editar">
             </td>
         </tr>
         <tr>
@@ -71,7 +71,7 @@
             <td>Inativo</td>
             <td>919298345869</td>
             <td>
-                <input type="button" value="Editar">
+                <input type="button" value="Editar" id="editar">
             </td>
         </tr>
         <tr>
@@ -80,7 +80,7 @@
             <td>--</td>
             <td>--</td>
             <td>
-                <input type="button" value="Editar">
+                <input type="button" value="Editar" id="editar">
             </td>
         </tr>
         <tr>
@@ -89,7 +89,7 @@
             <td>--</td>
             <td>--</td>
             <td>
-                <input type="button" value="Editar">
+                <input type="button" value="Editar" id="editar">
             </td>
         </tr>
     </table>
