correções e atualização do projeto.

--- a/novoAluno.html
+++ b/novoAluno.html
@@ -71,7 +71,8 @@
             <label for="estado">Estado</label><br>
             <select name="estado" id="estado">
                         <option value="">(lista)</option>
-                    </select><br>
+            </select>
+            <br>
             <label for="cep">CEP</label><br>
             <input type="text" name="cep" id="cep">
         </fieldset><br>
